--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -183,6 +183,7 @@ fr-FR:
         sale_order_nature_name: Vente standard
         sample_product_name: Produit Exemple
         shelf_name: Sans catégorie
+        stock_location: Lieu de stockage par défaut
         tva000: TVA 0,00%
         tva210: TVA 2,10%
         tva550: TVA 5,50%
