Addition of files for the management of tax declaration
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1240 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -30,47 +30,7 @@ fr-FR:
     models:
       account: 'Compte'
       account_balance: 'Balance de compte'
-      address_norm: 'Norme postale'
-      address_norm_item: 'Élément de norme postale'
-      area: 'Zone postale'
-      bank_account: 'Compte bancaire'
-      bank_account_statement: 'Relevé de compte bancaire'
-      company: 'Société'
-      complement: 'Champ complémentaire'
-      complement_choice: 'Choix de champ complémentaire'
-      complement_datum: 'Donnée complémentaire de fiche'
-      contact: 'Contact'
-      currency: 'Devise'
-      delay: 'Délai'
-      delivery: 'Livraison'
-      delivery_line: 'Ligne de livraison'
-      delivery_mode: 'Mode de livraison'
-      department: 'Service'
-      district: 'Zone administrative'
-      document: 'Document'
-      document_template: 'Modèle de document'
-      embankment: 'Encaissement'
-      employee: 'Employé'
-      entity: 'Relation'
-      entity_category: 'Catégorie de relation'
-      entity_link: 'Lien de relation'
-      entity_link_nature: 'Nature du lien de la relation'
-      entity_nature: 'Type de relation'
-      entry: 'Écriture'
-      establishment: 'Établissement'
-      event: 'Évènement'
-      event_nature: 'Type d''évènement'
-      financialyear: 'Exercice'
-      inventory: 'Inventaire'
-      inventory_line: 'Ligne d''inventaire'
-      invoice: 'Facture'
-      invoice_line: 'Ligne de facture'
-      journal: 'Journal'
-      journal_record: 'Pièce comptable'
-      language: 'Langue'
-      listing: 'Extraction'
-      listing_node: 'Noeud d''extraction'
-      listing_node_item: 'Élément de noeud d''extraction'
+      address_: 'Élément de noeud d''extraction'
       mandate: 'Responsabilité'
       observation: 'Observation'
       parameter: 'Paramètre'
@@ -1608,6 +1568,23 @@ fr-FR:
         reductible: 'Réductible'
         updated_at: 'Mis à jour le'
         updater_id: 'Modificateur'
+
+      # 
+      tax_declaration:
+        nature: 'Régime de la déclaration'
+        normal: 'Réel normal'
+        address: 'Adresse du service destinataire'
+        declared_on: 'Déclarée le'
+        paid_on: ''
+        started_on: 'Commencé le'
+        stopped_on: 'Fini le'
+        period: 'Période'
+        amount: 'TVA totale'
+        financialyear_id: 'Période considérée'
+        collected_amount: 'TVA brute'
+        paid_amount: 'TVA déductible'
+        deferred_payment: 'Crédit à reporter'
+        assimilated_taxes_amount: 'Montant des taxes assimilées'
 
       # (((TRANSPORT)))
       transport:
