--- a/config/locales/fr-FR/help/accountancy-financialyear_update.txt
+++ b/config/locales/fr-FR/help/accountancy-financialyear_update.txt
@@ -1,2 +1,5 @@
 h1. Comment modifier un exercice comptable ?
-Remplisser le formulaire de modification de l'exercice en renseignant bien tous les champs. Le champ **Autoriser l'écriture jusqu'au** détermine une date limite au-delà de laquelle les écritures afférentes à l'exercice considéré ne seront pas produits sur les documents comptables propres à cet exercice. Faites attention à ce que **la valeur de ce champ soit supérieure à la Date de clôture de l'exercice** sinon une erreur sera levée après validation du formulaire.
+Remplisser le formulaire de modification de l'exercice en renseignant bien tous les champs. Pour les dates, vous pouvez aussi bien les saisir à la main ou sélectionner la date dans un mini-calendrier à l'aide du petit icône situé à côté des champs correspondants.
+
+
+NB: Faites attention à ce que **la valeur de la date de clôture sooit supérieure à la date de commencement de l'exercice** sinon une erreur sera levée après validation du formulaire.
