--- a/config/locales/fr-FR.pack.management.yml
+++ b/config/locales/fr-FR.pack.management.yml
@@ -48,10 +48,12 @@ fr-FR:
       product_prices:
         purchases_price_create: 'Créer un nouveau prix d''achat'
         sales_price_create: 'Créer un nouveau prix de vente'
+      purchase_order: 'Achat'
       purchase_order_lines:
         purchase_order_line_create: 'Ajouter un produit à la commande'
       reservoir: 'Réservoir'
       sale_order_already_invoiced: 'La vente a déjà été facturée: vous ne pouvez pas définir de livraison'
+      sale_order: 'Vente'
       sale_order_lines:
         sale_order_line_create: 'Ajouter un produit au devis'
       scheduled: 'Échéance'
@@ -252,12 +254,13 @@ fr-FR:
         select_stock_location: 'Choississez un lieu de stockage'
       payment:
         payment_update: 'Modifier le réglement'
+        purchase_orders: 'Achats liés au réglement'
         sale_orders: 'Ventes liées au règlement'
         title: 'Réglement n°{{number}} de {{entity}}'
       payment_create:
         title: 'Ajout d''un nouveau règlement'
       payment_part_create:
-        title: 'Ajouter un nouveau réglement à la vente : {{value}}'
+        title: 'Ajouter un nouveau réglement : {{type}} {{value}}'
       _payment_form:
         check: 'Pour les réglements de type chèque'
         title: 'Renseignez les conditions du réglement'
@@ -267,7 +270,7 @@ fr-FR:
         select_existing_payment: 'Sélectionner un réglement existant'
         existing_part: 'Utiliser un réglement non affecté'
         new: 'Créer un nouveau réglement'
-        payment_label: '{{number}}. {{amount}} du {{date}} par {{mode}} de {{entity}}'
+        payment_label: '{{number}}. {{amount}} ({{usable_amount}} restants) du {{date}} par {{mode}} de {{entity}}'
         unused_payment: 'Réglement à utiliser'
       payment_mode_create:
         title: 'Créer un nouveau type de réglement'
@@ -369,6 +372,13 @@ fr-FR:
         title: 'Ajouter un produit à la commande'
       purchase_order_line_update:
         title: 'Modifier une ligne de la commande'
+      purchase_order:
+        general_informations: 'Informations générales'
+        lines: 'Lignes d''achat'
+        payment_parts: 'Règlements'
+        purchase_order_lines: 'Modifier l''achat'
+        purchase_order_print: 'Imprimer la commande d''achat'
+        title: 'Détails de l''achat {{number}} au fournisseur {{supplier}}'
       purchase_orders:
         nb_purchases:
           one: '1 achat'
