document templates, purchase orders, tabbox, entity lock.......
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1244 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -237,6 +237,11 @@ fr-FR:
         management: Commerce
         resources: Ressources
         production: Production
+      natures:
+        invoice: 'Facture de vente'
+        other: 'Autres'
+        purchase_order: 'Commande d''achat'
+        sale_order: 'Devis / Commande'
     entity:
       client: 'Client'
       supplier: 'Fournisseur'
