--- a/config/locales/fr-FR.pack.management.yml
+++ b/config/locales/fr-FR.pack.management.yml
@@ -392,7 +392,7 @@ fr-FR:
         lines: 'Lignes d''achat'
         payment_parts: 'Règlements'
         purchase_order_lines: 'Modifier l''achat'
-        purchase_order_print: 'Imprimer la commande d''achat'
+        purchase_order_print: 'Imprimer la commande fournisseur'
         title: 'Détails de l''achat {{number}} au fournisseur {{supplier}}'
       purchase_orders:
         nb_purchases:
