--- a/config/locales/fr-FR/help/accountancy-entries.txt
+++ b/config/locales/fr-FR/help/accountancy-entries.txt
@@ -1,13 +1,14 @@
-h1. Saisir des écritures
+h1. Ecritures
 
 h2. Qu'est ce qu'une écriture comptable ?
 Une écriture comptable est une opération consistant à enregistrer un flux commercial, économique ou financier à l'intérieur de comptes. Une écriture est relative à une pièce justificative. Son montant est enregistré soit au débit ou au crédit d'un compte, cela à une date qui peut être postèrieure à la date d'émission ou de réception de la pièce.
 
-h2. Choisir son journal et son exercice
-Avant de vous lancer dans la saisie des écritures, il est nécessaire de choisir l'exercice et le journal pour lesquels ces écritures vont être enregistrées grâce à un formulaire. Pour afficher le formulaire, cliquer sur le lien **Changer de journal et/ou d'exercice...**
+h2. Choisir son journal et/ou d'exercice
+Dans le formulaire, sélectionner l'exercice et le journal en utilisant **les listes déroulantes**.
 
-h2. Changer de journal et/ou d'exercice
-Dans le formulaire, sélectionner l'exercice et le journal en utilisant **les listes déroulantes**. La zone de texte restante permet de préciser à votre appréciation, le nombre de pièces comptables à afficher dans le tableau de écritures. 
+h2. Formulaire en mode saisie
+Pour chacune des écritures à enregistrer, remplisser **scrupuleusement** le formulaire de saisie situé au-dessus du tableau(par-exemple, faites attention à ce que **la date d'enregistrement** de votre écriture **ne soit pas infèrieure** à la date de clôture du journal considéré). En saisissant les premières lettres de l'intitulé du compte ou bien les premiers chiffres de son identifiant, un listing s'affiche automatiquement vous permettant de sélectionner le compte que vous recherchez. Après chaque validation, l'écriture est **rajoutée au listing**. 
 
-h2. La liste des écritures
-Pour chacune des écritures à enregistrer, remplisser **scrupuleusement** le formulaire de saisie situé au-dessus du tableau(par-exemple, faites attention à ce que **la date d'enregistrement** de votre écriture **ne soit pas infèrieure** à la date de clôture du journal considéré). En saisissant les premières lettres de l'intitulé du compte ou bien les premiers chiffres de son identifiant, un listing s'affiche automatiquement vous permettant de sélectionner le compte que vous recherchez. Après chaque validation, l'écriture est **rajoutée au listing**. Lorsqu'une pièce est équilibrée, l'ensemble des écritures afférentes apparaissent en **vert** sinon, elles apparaissent en **rouge**. En outre, il est possible pour chaque écriture de la modifier <<accountancy-entries_update|{{buttons/update.png|modifier}}>> ou même de la supprimer<<accountancy-entries_delete|{{buttons/delete.png|supprimer}}>> uniquement dans le cas où elle n'est pas **verrouillée** (crée avant la date de clôture du journal).
+Lorsqu'une pièce est équilibrée, l'ensemble des écritures afférentes apparaissent en **vert** sinon, elles apparaissent en **rouge**. En outre, il est possible pour chaque écriture de la modifier <<accountancy-entries_update|{{buttons/update.png|modifier}}>> ou même de la supprimer<<accountancy-entries_delete|{{buttons/delete.png|supprimer}}>> uniquement dans le cas où elle n'est pas **verrouillée** (crée avant la date de clôture du journal).
+
+**NB**: en vue d'une saisie, veiller à bien saisir **un journal et un exercice donné** sinon le formulaire ne s'affiche pas.
