--- a/config/locales/fr-FR/help/accountancy-entries_consult.txt
+++ b/config/locales/fr-FR/help/accountancy-entries_consult.txt
@@ -2,10 +2,10 @@ h1. Consulter des écritures
 
 
 h2. Choisir son journal et son exercice
-Sélectionner l'exercice comptable et/ou le journal dont vous souhaitez consulter les écritures. Dans le cas où vous sélectionner le journal depuis <<accountancy-journals|le listing des journaux>> ou l'exercice depuis <<accountancy-financialyears|le listing des exercices>>, celui-ci est automatiquement pris en compte dans le formulaire.
+Sélectionner l'exercice comptable et/ou le journal dont vous souhaitez consulter les écritures.
 
 h2. La liste des écritures
-Un listing des écritures correspondant à votre demande apparaît. L'indication **Pas d'enregistrement** vous indique simplement qu'aucune écriture n'a été trouvée. 
+Un listing des écritures correspondant à votre demande apparaît dans le cas où des écritures ont été trouvé.
 
 
 
