git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1258 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -165,7 +165,7 @@ fr-FR:
           sale_order: Vente
         document_templates:
           embankment: 'Remise de chèques'
-          entity: 'Fiche relations'
+          entity: 'Fiche relation'
           inventory: 'Inventaire'
           invoice: Facture client
           journal: Journal
