Fixes #70 Evolution: Merge line_4
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1263 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -309,8 +309,7 @@ fr-FR:
         latitude: 'Latitude'
         line_2: 'Destinataire - Service'
         line_3: 'Bât. - Rés. - ZI...'
-        line_4_number: 'Numéro de la voie'
-        line_4_street: 'Libellé de la voie'
+        line_4: 'Numéro et libellé de la voie'
         line_5: 'Mention spéciale - Lieu dit'
         line_6: 'Code postal ET ville'
         line_6_city: 'Ville'
