--- a/config/locales/fr-FR.pack.relations.yml
+++ b/config/locales/fr-FR.pack.relations.yml
@@ -9,8 +9,7 @@ fr-FR:
       contact_fax: 'Fax'
       contact_line_2: 'Dest-Service'
       contact_line_3: 'Bat.-Rés.-ZI'
-      contact_line_4_number: 'Numéro de la voie'
-      contact_line_4_street: 'Libellé de la voie'
+      contact_line_4: 'Numéro et voie'
       contact_line_5: 'Lieu dit'
       contact_line_6_city: 'Ville'
       contact_line_6_code: 'Code Postal'
