git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1265 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -171,6 +171,7 @@ fr-FR:
           journal: Journal
           journal_by_id: 'Journal'
           journals: Journaux
+          order_preparation: 'Préparation de commande'
           other: 'Autres'
           purchase_order: 'Commande fournisseur'
           sale_order: 'Devis/Commande'
@@ -180,6 +181,7 @@ fr-FR:
           entity: 'Fiche de [full_name]'
           inventory: 'Inventaire du [date]'
           invoice: 'Facture [number]'
+          order_preparation: 'Préparation de commande du [created_on]'
           other: 'Fichier'
           purchase_order: 'Achat [number]'
           sale_order: 'Vente [number]'
