--- a/config/locales/fr-FR.parameters.yml
+++ b/config/locales/fr-FR.parameters.yml
@@ -31,6 +31,7 @@ fr-FR:
       embankments:
         days_before_warning_undone: 'Nombre de jours avant de prévenir pour les encaissements non effectués'
         days_before_warning_unvalidated: 'Nombre de jours nécessaire pour pour pouvoir valider une remise de chèque'
+        numeration: 'Numérotation des remises de chèques'
       invoicing:
         numeration: 'Numérotation des factures'
       payments:
