add subscription number
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1270 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -1527,6 +1527,7 @@ fr-FR:
         last_number: 'Dernier numéro'
         lock_version: 'Version'
         nature_id: 'Type'
+        number: 'Numéro'
         product_id: 'Produit'
         quantity: 'Quantité'
         sale_order_id: 'Vente'
