git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1271 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.parameters.yml
+++ b/config/locales/fr-FR.parameters.yml
@@ -38,6 +38,8 @@ fr-FR:
         numeration: 'Numérotation des règlements'
       sale_orders:
         numeration: 'Numérotation des ventes'
+      subscriptions:
+        numeration: 'Numérotation des abonements'
       impressions:
         natures:
           delivery: 'Type de document pour les devis' 
