add material to production and operation informations
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1272 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.production.yml
+++ b/config/locales/fr-FR.pack.production.yml
@@ -13,6 +13,7 @@ fr-FR:
     production:
       index:
         indicator: 'Tableau de bord'
+        materials: 'Matériel'
         nb_operations:
           one: '1 traitement à réaliser'
           other: '{{count}} traitements à réaliser'
@@ -24,6 +25,9 @@ fr-FR:
         shape_operations: 'Traitements'
         shapes: 'Îlots'
         title: 'Gestion de la production'
+      materials:
+        material_create: 'Ajouter une machine'
+        title: 'Matériel'
       production_create:
         title: 'Créer une nouvelle production'
       _production_form:
@@ -45,6 +49,9 @@ fr-FR:
         production_create: 'Enregistrer un nouvelle production'
         productions: 'Productions'
         title: 'Productions'
+      shape:  
+        operations: 'Traitements'
+        title: 'Îlot {{name}}'
       shape_create:
         title: 'Ajouter un nouvel îlot'
       _shape_form:
