--- a/config/locales/fr-FR.rights.yml
+++ b/config/locales/fr-FR.rights.yml
@@ -43,6 +43,7 @@ fr-FR:
     manage_journals: 'Gérer les journaux'
     manage_listings: 'Gérer les extractions'
     manage_mandates: 'Gérer les responsabilités'
+    manage_materials: 'Gérer le matériel de production'
     manage_observations: 'Gérer les observations'
     manage_orders: 'Gérer les commandes et livraisons'
     manage_payment_modes: 'Gérer les modes de paiments'
