model : equipment becomes tool
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1274 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -682,13 +682,6 @@ fr-FR:
         updated_at: 'Mis à jour le'
         updater_id: 'Modificateur'
 
-      # Matériel
-      equipment:
-        consumption: 'Consommation (litres/heure)'
-        name: 'Nom'
-        nature: 'Nature'
-        text_nature: 'Nature'
-
       # Établissement
       establishment:
         comment: 'Commentaire'
@@ -1599,6 +1592,13 @@ fr-FR:
         paid_amount: 'TVA déductible'
         deferred_payment: 'Crédit à reporter'
         assimilated_taxes_amount: 'Montant des taxes assimilées'
+
+      # Matériel
+      tool:
+        consumption: 'Consommation (litres/heure)'
+        name: 'Nom'
+        nature: 'Nature'
+        text_nature: 'Nature'
 
       # (((TRANSPORT)))
       transport:
