git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1276 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.production.yml
+++ b/config/locales/fr-FR.pack.production.yml
@@ -57,6 +57,7 @@ fr-FR:
         title: 'Créer un nouveau traitement'
       _shape_operation_form:
         infos: 'Renseignez les caractéristiques du traitement'
+        tools: 'Sélectionnez le matériel utilisé'
       shape_operation_nature_create:
         title: 'Créer un nouveau type de traitement'
       shape_operation_nature_update:
