addition of accountize function in the models sale_orders, invoices, purchase_orders, payments and transfers.
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1285 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -267,6 +267,7 @@ fr-FR:
         entity: 'Fiche relations'
         inventory: 'Inventaire'
         invoice: 'Facture client'
+        journal: 'Journal'
         other: 'Autres'
         purchase_order: 'Commande fournisseur'
         sale_order: 'Devis / Commande'
