update help, and some updates
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1290 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.management.yml
+++ b/config/locales/fr-FR.pack.management.yml
@@ -605,7 +605,7 @@ fr-FR:
         accountancy: 'Comptabilité'
         description: 'Description générale'
         localization: 'Localisation géographique'
-        reservoir_informations: 'Informations sur la cuve'
+        reservoir_informations: 'Informations sur le réservoir'
       stock_location_update:
         title: 'Modification d''un lieu de stockage'
       stock_move_create:
