--- a/config/locales/fr-FR/help/management-purchase_order_line_create.txt
+++ b/config/locales/fr-FR/help/management-purchase_order_line_create.txt
@@ -1,11 +1,11 @@
 h1. Comment ajouter un produit à une commande ?
 
-h2. Le produit
-Il faut sélectionner le produit à commander dans la liste déroulante correspondante. Si le produit n'a pas encore été créé, vous pouvez cliquer sur le lien "nouveau" qui vous redirigera vers le formulaire de création d'un nouveau produit.
+h2. Le prix
+*Séléctionner un prix permet évidemment de sélectionner le produit.*
+Il faut sélectionner le prix à commander dans la liste déroulante correspondante. Si le prix n'a pas encore été créé, vous pouvez cliquer sur le lien "nouveau" qui vous redirigera vers le formulaire de création d'un nouveau prix.
 
 h2. Le montant et la TVA
-* Si le produit n'a pas de prix déjà enregistré, l'ajout du produit à la commande entrainera la création automatique d'un nouveau prix dans la liste de prix correspondante.Vous pouvez consulter vos listes de prix et leurs différents prix dans la rubrique *Tarifs*.
-* Pour un produit dont le prix a déjà été enregistré, le montant HT et la TVA se mettent à jour automatiquement.
+Lorsque vous sélectionnez un prix, *le montant HT et la TVA se mettent à jour* automatiquement. Si vous décidez de *modifier* la taxe ou le montant HT, ce *nouveau prix sera créé*, associé à votre achat et deviendra le nouveau prix par défaut du produit.
 
 h2. Le lieu de stockage
 * Ce champ n'apparaît que dans le cas ou vous disposez de plusieurs lieux de stockage.
