--- a/config/locales/fr-FR/help/management-purchase_order_line_update.txt
+++ b/config/locales/fr-FR/help/management-purchase_order_line_update.txt
@@ -1,5 +1,5 @@
 h1. Comment modifier une ligne de la commande ?
 
-Vous ne pouvez modifier uniquement que la quantité de produit commandé.
+Modifiez les informations souhaitées.
 
 <<management-index|Retour à l'aide sur la Gestion Commerciale>>
