--- a/config/locales/fr-FR/help/management-sale_order_deliveries.txt
+++ b/config/locales/fr-FR/help/management-sale_order_deliveries.txt
@@ -1,9 +1,8 @@
 h1. Les livraisons
 
-Si il reste des produits à livrer, et donc que vous avez définit plusieurs livraisons, un tableau récapitule les quantités restantes à livrer pour chaque produit.
+Vous avez accès au *récapitulatif des livraisons effectuées* et à ce qu'il vous *reste* comme quantités possibles à livrer si tel est le cas.
 
-Vous avez également un récapitulatif des livraisons déjà définies. Si une livraison a été facturée, vous ne pouvez plus ni la modifier, ni la facturer.
-
+Si vous décidez de *facturer la vente vous ne pourrez plus ajouter, modifier ou supprimer une livraison.*
 
 
 <<management-index|Retour à l'aide sur la Gestion Commerciale>>
