--- a/config/locales/fr-FR/help/management-sale_order_delivery_create.txt
+++ b/config/locales/fr-FR/help/management-sale_order_delivery_create.txt
@@ -1,10 +1,9 @@
 h1. Comment créer une livraison ?
 
-Vous devez impérativement *saisir au moins une livraison* pour chaque vente. Si il n'y pas de réelle livraison, sélectionnez "En main propre" dans la liste déroulante Type. Vous devez également saisir la *date prévue* pour la livraison. 
-
 Pour chaque produit, définissez la quantité de produit à livrer pour la livraison dans le champ Quantité.
 
-La création de livraisons entraîne la création d'un rappel automatique des *livraisons en attente* pour toutes les livraisons créées (à l'exception des livraisons prévue le jour-même et de type "En main propre", auxquelles vous avez accès depuis le *tableau de bord* (Index de l'application et Index de la Gestion Commerciale) vous permettant ainsi de veiller à ce que celles-ci soient bien effectuées. Parallèlement, ceci vous permet de mettre à jour la gestion des stocks.
+Une livraison permet de *définir quand, où* (sélection de l'adresse de livraison) et *en quelles proportions* seront livrés vos produits.
+La création d'une livraison entraîne la création d'un rappel automatique, les *livraisons en attente* auxquelles vous avez accès depuis le *tableau de bord* (Index de l'application et Index de la Gestion Commerciale) vous permettant ainsi de veiller à ce que celles-ci soient bien effectuées. Ceci vous permet de *mettre à jour la gestion des stocks de manière cohérente*.
 
 
 <<management-index|Retour à l'aide sur la Gestion Commerciale>>
