--- a/config/locales/fr-FR/help/management-sale_orders.txt
+++ b/config/locales/fr-FR/help/management-sale_orders.txt
@@ -1,8 +1,8 @@
 h1. Comment consulter la liste des ventes?
 
-* La liste des ventes répertorie toutes les ventes réalisées a vos différents clients.
+* La liste des ventes répertorie toutes les ventes réalisées a vos différents clients. Vous pouvez *rechercher* une vente par son *numéro*, *montant HT et TTC*, *nom et code client*, ainsi que sélectionner uniquement les *ventes en cours* ou *impayées*.
 
-* Le numéro de la vente et est un lien vous redirigeant vers l'étape "Produits" de votre vente.
+* Le numéro de la vente et est un lien vous redirigeant vers l'étape "Création du devis" de votre vente.
 
 * Le nom du client est un lien vous redirigeant vers la fiche client considérée.
 
