--- a/config/locales/fr-FR/help/management-stock_location_create.txt
+++ b/config/locales/fr-FR/help/management-stock_location_create.txt
@@ -1,6 +1,8 @@
 h1. Comment créer un nouveau lieu de stockage ?
 
-Pour créer un nouveau lieu de stockage, il vous suffit de renseigner les différents paramètres qui vous sont demandés. Certains sont obligatoires (encadrés bleux) et d'autres sont facultatifs (encadrés gris). La création ne peut s'effectuer uniquement si tous les champs obligatoires ont été correctement renseignés.
+Pour créer un nouveau lieu de stockage, il vous suffit de renseigner les différents paramètres qui vous sont demandés. 
+
+*Si vous créez un réservoir, vous devrez également sélectionnez le produit contenu* ansi que sa quantité maximum.
 
 
 Le compte comptable associé est un compte de classe 3 (commencant par 3).
