--- a/config/locales/fr-FR/help/management-stock_move_create.txt
+++ b/config/locales/fr-FR/help/management-stock_move_create.txt
@@ -1,6 +1,6 @@
 h1. Comment enregistrer un mouvement de stock ?
 
-* Pour enregistrer un mouvement de stock, il vous suffit de renseigner les différents paramètres qui vous sont demandés. Certains sont obligatoires (encadrés bleux) et d'autres sont facultatifs (encadrés gris). La création ne peut s'effectuer uniquement si tous les champs obligatoires ont été correctement renseignés.
+Pour enregistrer un mouvement de stock, il vous suffit de renseigner les différents paramètres qui vous sont demandés. Certains sont obligatoires (encadrés bleux) et d'autres sont facultatifs (encadrés gris). La création ne peut s'effectuer uniquement si tous les champs obligatoires ont été correctement renseignés.
 
 
 
