--- a/config/locales/fr-FR/help/management-unreceived_purchases.txt
+++ b/config/locales/fr-FR/help/management-unreceived_purchases.txt
@@ -1,7 +1,7 @@
 h1. Commandes en attente de réception
 
 
-Vous avez la liste des achats récemment réalisé et pour lesquels la réception n'a pas été confirmée. Il vous suffit de *cocher les livraisons que vous avez reçues* et ensuite de valider.
+Vous avez la liste des achats récemment réalisés et pour lesquels la réception n'a pas été confirmée. Il vous suffit de *cocher les livraisons que vous avez reçues* et ensuite de valider.
 
 Ceci permet de mettre à jour vos achats et votre gestion des stocks.
 
