after create becomes create_with_data, help updates
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1291 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -142,9 +142,12 @@ fr-FR:
       error_journal_statement: 'Le relevé bancaire est spécifique à un journal.'
       error_account_children: 'Le compte comptable ne peut pas être supprimé car il contient des sous-comptes'                                   
     company:
+      invoice_creation: 'Création d''une facture'
+      purchase_order_creation: 'Création d''un achat'
       sale_order_creation: 'Création d''un devis'
       sale_orders: Ventes
       default:
+        admin: 'Administrateur'
         bank_journal_nature_name: Banque
         category: Par défaut
         check: Chèque
