--- a/config/locales/fr-FR/help/relations-event_nature_create.txt
+++ b/config/locales/fr-FR/help/relations-event_nature_create.txt
@@ -1,3 +1,5 @@
 h1. Comment ajouter un nouveau type d'évènement ?
 
 Remplisser bien le formulaire en renseignant bien tous les champs. Le champ **Utilisation** vous permet de préciser la raison qui fournit ce type d'évènement.
+
+Par exemple, si vous sélectionnez "Création d'un devis", un événement sera créé automatiquement pour votre client à chaque fois que vous créerez un devis. Utilisation manuelle signifie que vous créez vous-même l'événement.
