git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1294 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.accountancy.yml
+++ b/config/locales/fr-FR.pack.accountancy.yml
@@ -149,8 +149,8 @@ fr-FR:
       document_prepare:
         balance: 'Balance'
         general_ledger: 'Grand livre'
-        journal: 'Journal général'
-        journal_by_id: 'Journal'
+        journals: 'Journal général'
+        journal: 'Journal'
         synthesis: 'Documents de synthèse'
         title: 'Choisissez le type de document à imprimer'
       document_print:
