--- a/config/locales/fr-FR.parameters.yml
+++ b/config/locales/fr-FR.parameters.yml
@@ -36,10 +36,12 @@ fr-FR:
         numeration: 'Numérotation des factures'
       payments:
         numeration: 'Numérotation des règlements'
+      purchase_orders: 
+        numeration: 'Numérotation des achats'
       sale_orders:
         numeration: 'Numérotation des ventes'
       subscriptions:
-        numeration: 'Numérotation des abonements'
+        numeration: 'Numérotation des abonnements'
       impressions:
         natures:
           delivery: 'Type de document pour les devis' 
